Mesclando históricos diferentes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1>Amigo Secreto</h1>
+    <h1>Amigo<br />Secreto</h1>
 
     <div class="container">
       <img
